[metadata]
name = lsst_utils
description = Utility functions from Rubin Observatory Data Management for the Legacy Survey of Space and Time (LSST).
author = Rubin Observatory Data Management
url = https://github.com/lsst/utils
classifiers =
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
# zip_safe can't be used for mypy compatibility
zip_safe = False
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  numpy >= 1.17
  psutil >= 5.7
  deprecated >= 1.2
  pyyaml >= 5.1
  astropy >= 5.0
  threadpoolctl
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[options.package_data]
lsst.utils = py.typed

[pydocstyle]
convention = numpy
# Our coding style does not require docstrings for magic methods (D105)
# Our docstyle documents __init__ at the class level (D107)
# We allow methods to inherit docstrings and this is not compatible with D102.
# Docstring at the very first line is not required
# D200, D205 and D400 all complain if the first sentence of the docstring does
# not fit on one line.
add-ignore = D107, D105, D102, D100, D200, D205, D400

# The ignore list for flake8 itself when run on the command line is distinct
# from the ignore list used by the pytest-flake8 plugin. This provides more
# control over testing but does require that the lists are kept in sync
# if there are later changes to the developer guide standard.
[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503, E203
exclude = __init__.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503 E203
